Fix spacing

--- a/app/assets/stylesheets/modules/status.sass
+++ b/app/assets/stylesheets/modules/status.sass
@@ -51,7 +51,7 @@
 #carlton
   height: 100%
   width: auto
-  margin-left: 35%
+  margin-left: 41%
 
 .slide-out
   transform: translateX(0%)
@@ -139,7 +139,7 @@
 
   .room-name
     display: block
-    width: 605px
+    width: 539px
     margin-top: 25px
     margin-left: 50px
     margin-right: auto
